# OOP_Labs

./: README.md
Lab_1/: func.h  task_01.cpp
Lab_2/: CMakeLists.txt  README.md  main.cpp  solve.cpp  solve.h  tests.cpp
Lab_3/: README.md
Lab_4/: README.md
Lab_5/: README.md
Lab_6/: CMakeLists.txt  README.md  main.cpp
Lab_6/header/: Battle.h  Dragon.h  FactoryHeroes.h  Heroes.h  Knight.h  Pegasus.h
Lab_6/src/: Battle.cpp  Dragon.cpp  FactoryHeroes.cpp  Heroes.cpp  Knight.cpp  Observer.cpp  Pegasus.cpp
Lab_6/tests/: tests.cpp
Lab_7/: CMakeLists.txt  README.md  main.cpp
Lab_7/header/: Battle.h  Dragon.h  FightManager.h  Heroes.h  Knight.h  Observer.h  Pegasus.h
Lab_7/src/: Battle.cpp  Dragon.cpp  FactoryHeroes.cpp  FightManager.cpp  Heroes.cpp  Knight.cpp  Observer.cpp  Pegasus.cpp
Lab_7/tests/: tests.cpp
lab_01/: func.cpp  main.cpp
